[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bulwark-eval"
version = "0.1.0"
description = "AI Agent Security Evaluation Framework — red-team your agents against OWASP ASI Top 10"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [
    {name = "Olav Phillips"},
]
keywords = ["ai", "security", "red-team", "evaluation", "owasp", "agents", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.25",
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
langchain = ["langchain-core"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]
all = ["bulwark-eval[langchain,dev]"]

[project.scripts]
bulwark = "bulwark.cli:cli"

[project.urls]
Homepage = "https://github.com/orphillips/bulwark"
Repository = "https://github.com/orphillips/bulwark"
Issues = "https://github.com/orphillips/bulwark/issues"

[tool.hatch.build.targets.wheel]
packages = ["bulwark"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
